# MultiMotionFusion

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yml
CMakeModules/: multimotionfusionConfig.cmake
Core/: CMakeLists.txt  CoFusion.cpp  FrameData.h  GPUTexture.cpp  MultiMotionFusion.cpp  MultiMotionFusion.h
Core/Cuda/: cudafuncs.cu  reduce.cu
Core/Model/: Deformation.cpp  Model.cpp  Model.h
Core/Segmentation/: Segmentation.cpp  Segmentation.h
Core/Shaders/: FeedbackBuffer.cpp
Core/Utils/: GroundTruthOdometryInterface.hpp  OpenGLErrorHandling.h  Parse.cpp  PointTracker.cpp  PointTracker.hpp  RGBDOdometry.cpp  RigidRANSAC.cpp  RigidRANSAC.h  RigidRANSAC_priv.h
Core/tests/: ransac_test.cpp  ransac_test_points.cpp
GUI/: CMakeLists.txt  MainController.cpp  MainController.h
GUI/Tools/: GUI.h  GroundTruthOdometry.h  ImageLogReader.cpp  ImageLogReader.h  KlgLogReader.cpp  KlgLogReader.h  LiveLogReader.cpp  LogReader.h  RosBagReader.cpp  RosBagReader.hpp  RosInterface.cpp  RosInterface.hpp  RosNodeReader.cpp  RosNodeReader.hpp  RosStatePublisher.cpp  RosStatePublisher.hpp  ros_common.cpp  ros_common.hpp
doc/: install.sh  setup.sh
scripts/: mmf_bag_tracking.sh  mmf_bag_tracking_segmentation.sh
